# telehealthxion

./: .gitignore  Cargo.toml
app/: constants.ts  database.rules.json  package-lock.json  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/app/actions.json/: route.ts
app/app/api/action/: route.ts
app/app/components/: AppWalletProvider.tsx  ConnectWallet.tsx  PatientDetailsPopup.tsx  PopupWallet.tsx  firebase-config.js
app/app/components/libs/: tele_health.json  tele_health.ts
app/app/connected/: page.tsx
app/app/doctor/docHome/: page.tsx
app/app/doctor/doctorProfile/: page.tsx
app/app/doctor/messages/: page.tsx
app/app/doctor/schedule/: page.tsx
app/app/doctor/video-call/: page.tsx
app/app/forgotPassword/: page.tsx
app/app/login/: page.tsx
app/app/patient/messages/: page.tsx
app/app/patient/schedule/: page.tsx
app/app/patient/userHome/: page.tsx
app/app/patient/video-call/: page.tsx  videocall.css
app/app/signup/: page.tsx
app/app/signup/doctorSignUp/: page.tsx
app/public/: _redirects
artifacts/: checksums.txt  checksums_intermediate.txt  telehealthxion.wasm
payments/: Cargo.toml
payments/artifacts/: checksums.txt  payments.wasm
payments/schema/: payments.json
payments/schema/raw/: execute.json  instantiate.json  response_to_get_config.json
payments/src/: lib.rs
payments/src/msg/: execute_msg.rs  instantiate_msg.rs  mod.rs  query_msg.rs
schema/: telehealthxion.json
schema/raw/: execute.json  query.json  response_to_get_health_record.json
src/: lib.rs  msg.rs
(+5 files in other folders)
