[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { version = "1.5.9" }
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.1.0"
schemars = "0.8.15"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "0.17.0"